--- a/login.html
+++ b/login.html
@@ -51,4 +51,4 @@
       }
 
 */
-</script><script src="assets/bootstrap/js/bootstrap.min.js"></script><script src="assets/js/CanvasManager.mjs" type="module"></script><script src="assets/js/FirebaseLoader.mjs" type="module"></script></body></html>
+</script><script src="assets/bootstrap/js/bootstrap.min.js"></script><script src="assets/js/script.min.js"></script><script src="assets/js/FirebaseLoader.mjs" type="module"></script></body></html>
