--- a/TemplatePage.html
+++ b/TemplatePage.html
@@ -63,7 +63,7 @@
                             <div class="card-header">
                                 <h5>HP</h5>
                             </div>
-                            <div class="card-body text-start"><input type="number" id="template_hp" style="width: 40.8px;" value="10" min="0" max="20" step="1"></div>
+                            <div class="card-body text-start"><input type="number" id="template_hp" style="width: 40.8px;" value="10" min="0" step="1" max="10000000"></div>
                         </div>
                     </div>
                     <div class="col">
