--- a/Level.html
+++ b/Level.html
@@ -40,7 +40,7 @@
     </div>
     <h3>Scene</h3>
     <div class="btn-group" role="group"><button class="btn btn-primary" id="create_mode_btn" type="button" onclick="mode(&quot;create&quot;); setState(&quot;create&quot;);">Create Mode</button><button class="btn btn-primary" id="edit_mode_btn" type="button" onclick="mode(&quot;edit&quot;); setState(&quot;edit&quot;);">Edit Mode</button><button class="btn btn-primary" id="clearbtn" type="button">Clear</button></div>
-    <div><input type="file" onchange="preview_image(event)">
+    <div>
 </div>
     <div class="row">
         <div class="col">
