--- a/Level.html
+++ b/Level.html
@@ -654,7 +654,7 @@
                                 <div class="card-header">
                                     <h5>HP</h5>
                                 </div>
-                                <div class="card-body text-start"><input type="number" id="hpfield" style="width: 40.8px;" value="10" min="0" max="20" step="1"></div>
+                                <div class="card-body text-start"><input type="number" id="hpfield" style="width: 40.8px;" value="10" min="0" max="10000000" step="1"></div>
                             </div>
                         </div>
                         <div class="col">
